# Resk

./: .gitattributes  .gitignore  Cargo.toml  README.md
resk_android/: Cargo.toml  resk-dev.keystore
resk_android/src/: lib.rs
resk_cli/: Cargo.toml
resk_cli/src/: controllers.rs  main.rs
resk_node/: Cargo.toml
resk_node/src/: controllers.rs  lib.rs  main.rs  mobile.rs  utils.rs
resk_ui/: .gitignore  README.md  pubspec.yaml
resk_ui/android/app/: build.gradle
resk_ui/android/app/src/main/: AndroidManifest.xml
resk_ui/android/app/src/main/kotlin/com/example/resk_ui/: MainActivity.kt
resk_ui/ios/Runner/: Info.plist
resk_ui/ios/Runner.xcodeproj/: project.pbxproj
resk_ui/lib/: communication.dart  controllers.dart  main.dart
resk_ui/lib/pages/: add_device.dart  connectivity.dart  settings.dart
resk_ui/linux/: CMakeLists.txt  my_application.cc
resk_ui/macos/Runner.xcodeproj/: project.pbxproj
resk_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
resk_ui/macos/Runner/Configs/: AppInfo.xcconfig
resk_ui/test/: widget_test.dart
resk_ui/windows/: CMakeLists.txt
resk_ui/windows/runner/: Runner.rc  main.cpp
